<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/app_mode_page" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/bg_main">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
        android:clipToPadding="false" android:fillViewport="true">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical" android:paddingBottom="@dimen/bottom_nav_clearance">
            <include layout="@layout/view_primary_header" android:layout_width="match_parent"
...
