<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/censor_page" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/bg_main">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:clipToPadding="false" android:fillViewport="true">
        <LinearLayout android:id="@+id/page_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:paddingStart="@dimen/page_margin" android:paddingTop="@dimen/primary_header_top" android:paddingEnd="@dimen/page_margin" android:paddingBottom="@dimen/bottom_nav_clearance">
            <include layout="@layout/view_primary_header" />
            <include layout="@layout/view_global_notice" />
            <LinearLayout android:id="@+id/home_service_widget" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ui_gap_group" android:background="@drawable/bg_home_command" android:orientation="vertical" android:paddingStart="13dp" android:paddingTop="@dimen/ui_gap_group" android:paddingEnd="13dp" android:paddingBottom="@dimen/ui_gap_group"
                <LinearLayout android:id="@+id/commitment_card" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ui_gap_control" android:background="@drawable/bg_home_module" android:orientation="vertical" android:padding="@dimen/ui_card_padding_compact">
                    <com.subhub.app.commitment.ServiceDurationView android:id="@+id/commitment_start_panel" android:layout_width="match_parent" android:layout_height="wrap_content" />
                    <LinearLayout android:id="@+id/commitment_active_panel" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:visibility="gone">
...
